Adop 536 (#109)
* Update Jenkinsfile_CNP

* fortify-nightly integration

* Update build.gradle

* Update build.gradle

* Removing fortify hook

* Removed serenity